[package]
name = "rsvd"
version = "0.1.0"
authors = ["Andriy Mykhaylyk <erp.lsf@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = "0.31.0"
ash-window = "0.4"
# raw-window-handle = "0.3.3"
log = "0.4.11"

[dependencies.sdl2]
version = "0.34.2"
features = ["raw-window-handle"]
